--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,10 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   flutter_modular: 5.0.3
+  rxdart: 0.27.7
+  shared_preferences: 2.0.17
+  google_fonts: 4.0.3
+  flutter_screenutil: 5.6.1
 
 dev_dependencies:
   flutter_test:
