add_auth_Screens

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,10 @@ dependencies:
   shared_preferences: 2.0.17
   google_fonts: 4.0.3
   flutter_screenutil: 5.6.1
+  easy_localization: 3.0.1
+  email_validator: 2.1.17
+  tap_debouncer: 2.0.2
+  flutter_svg: 2.0.2
 
 dev_dependencies:
   flutter_test:
@@ -65,7 +69,10 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - google_fonts/
+    - assets/translations/
+    - assets/google_fonts/
+    - assets/icons/
+
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
