--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,43 +19,46 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: '>=2.19.0 <3.0.0'
-
-# Dependencies specify other packages that your package needs in order to work.
-# To automatically upgrade your package dependencies to the latest versions
-# consider running `flutter pub upgrade --major-versions`. Alternatively,
-# dependencies can be manually updated by changing the version numbers below to
-# the latest version available on pub.dev. To see which dependencies have newer
-# versions available, run `flutter pub outdated`.
+  sdk: '>=3.0.3 <4.0.0'
 dependencies:
   flutter:
     sdk: flutter
 
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  flutter_modular: 5.0.3
-  rxdart: 0.27.7
-  shared_preferences: 2.0.17
-  google_fonts: 4.0.3
-  flutter_screenutil: 5.6.1
-  easy_localization: 3.0.1
-  email_validator: 2.1.17
-  tap_debouncer: 2.0.2
-  flutter_svg: 2.0.2
-  dio: 5.0.1
-  flutter_secure_storage: 8.0.0
-
+  flutter_modular: ^5.0.3
+  flutter_secure_storage: ^8.0.0
+  rive: ^0.11.4
+  rxdart: ^0.27.7
+  easy_localization: ^3.0.2
+  connectivity_plus: ^4.0.1
+  dio: ^5.2.1+1
+  package_info_plus: ^4.0.2
+  flutter_svg: ^2.0.7
+  json_annotation: ^4.8.1
+  flutter_screenutil: ^5.8.4
+  tap_debouncer: ^2.2.0
+  email_validator: ^2.1.17
+  
 dev_dependencies:
+  build_runner: ^2.4.6
+  json_serializable: ^6.7.1
+  mockito: ^5.4.2
+  flutter_launcher_icons: ^0.13.1
   flutter_test:
     sdk: flutter
-
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
+  cloud_firestore_odm_generator: ^1.0.0-dev.62
+  modular_test: ^2.0.0
+# For information on the generic Dart part of this file, see the
+# following page: https://dart.dev/tools/pub/pubspec
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -84,17 +87,12 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
+  fonts:
+    - family: Inter
+      fonts:
+        - asset: assets/google_fonts/Inter-Medium.ttf
+        - asset: assets/google_fonts/Inter-Regular.ttf
+          # style: italic
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
